<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ScrollView
        android:id="@+id/container"
        android:background="@drawable/background_pattern"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:background="#FFFFFF"
                android:padding="0dp"
                android:textSize="30sp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/connection_form" 
            />
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:padding="0dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:text="@string/usernam_field" 
            />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:fontFamily="sans-serif-light"
                android:ems="10" >
                <requestFocus />
            </EditText>
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="170dp"
                android:padding="0dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:text="@string/password_field" 
            />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
               	android:inputType="textPassword"
               	android:singleLine="true"
                android:imeOptions="actionDone"
                android:fontFamily="sans-serif-light"
                android:ems="10" >
                <requestFocus />
            </EditText>

<!--             <Button -->
<!--                 android:id="@+id/button1" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_marginTop="250dp" -->
<!--                 android:textSize="40sp" -->
<!--                 android:fontFamily="sans-serif-light" -->
<!--                 android:text="Vider" /> -->
            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/send_button" />
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="325dp"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/signup_button" />

         	<ProgressBar android:id="@+id/progressBar1"
  				android:layout_width="100dp"
				android:layout_height="100dp"
				android:layout_alignParentTop="true"
				android:layout_toRightOf="@+id/stop"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="200dp" />
           
        </RelativeLayout>
        
    </ScrollView>

</RelativeLayout>
